home page link changed to index and images added in image folder

--- a/booking.html
+++ b/booking.html
@@ -5,19 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Booking - London Attractions</title>
     <link rel="stylesheet" href="css/londonattraction.css">  
-    <script src="javascript/londonattraction.js"></script
-      <a href="Londonattraction.html"></a>
+    <script src="javascript/londonattraction.js"></script>
+      <a href="index.html"></a>
 </head>
 <body>
   <nav>
     <div class="logo">
-      <a href="Londonattraction.html">
-      <img src="/Users/arvind/Downloads/logo.jpg"alt ="london-Attarction">
-        <!-- <a href="Londonattraction.html">London Attractions</a> -->
+      <a href="index.html">
+      <img src="/images/logo.jpg"alt ="london-Attarction">
       </a>
     </div>
     <ul>
-        <li><a href="Londonattraction.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="booking.html">Booking</a></li>
         <li><a href="gallery.html">Gallery</a></li>
         <li><a href="contact.html">Contact</a></li>
@@ -42,7 +41,7 @@
             <div class="ticket-container">
                 <!-- Attraction 1: Big Ben -->
                 <div class="ticket-item">
-                    <img src="/Users/arvind/Downloads/bigben1.jpg" alt="Big Ben">
+                    <img src="/images/bigben1.jpg" alt="Big Ben">
                     <h3>Houses of Parliament & Big Ben</h3>
             <p>Take a guided tour through British political history, with views of the iconic Big Ben clock tower.</p>
             <p>Price: £24</p>
@@ -52,7 +51,7 @@
 
                 <!-- Attraction 2: London Eye -->
                 <div class="ticket-item">
-                    <img src="/Users/arvind/Downloads/londoneye1.jpeg" alt="London Eye">
+                    <img src="/images/londoneye1.jpeg" alt="London Eye">
                     <h3>London Eye</h3>
                     <p>Adult: £30 | Child: £15</p>
                     <p>Take a ride on the London Eye and get breathtaking views of the city’s skyline, including the River Thames and the Shard.</p>
@@ -61,7 +60,7 @@
 
                 <!-- Attraction 3: Buckingham Palace -->
                 <div class="ticket-item">
-                    <img src="/Users/arvind/Downloads/buckingham.jpeg" alt="Buckingham Palace">
+                    <img src="/images/buckingham.jpeg" alt="Buckingham Palace">
                     <h3>Buckingham Palace</h3>
                     <p>Adult: £25 | Child: £12</p>
                     <p>Visit the magnificent Buckingham Palace, home of the British monarchy, and experience its rich history and architecture.</p>
@@ -70,7 +69,7 @@
 
                 <!-- Attraction 4: The Victoria and Albert Museum -->
                 <div class="ticket-item">
-                    <img src="/Users/arvind/Downloads/va.jpeg" alt="Tower Bridge">
+                    <img src="/images/va.jpeg" alt="Tower Bridge">
                     <h3>The Victoria and Albert Museum</h3>
             <p>Discover an extensive collection of art, design, and fashion at the V&A.</p>
             <p>Price: Free (Some exhibits may charge)</p>
@@ -79,7 +78,7 @@
 
                 <!-- Attraction 5: The Sharde-->
                 <div class="ticket-item">
-                    <img src="/Users/arvind/Downloads/shard.jpeg" alt="Tower Bridge">
+                    <img src="/images/shard.jpeg" alt="Tower Bridge">
                     <h3>The Shard</h3>
             <p>Experience panoramic views of London from the tallest building in the UK.</p>
             <p>Price: £30</p>
@@ -88,7 +87,7 @@
 
                 <!-- Attraction 6: The Tower of London -->
                 <div class="ticket-item">
-                    <img src="/Users/arvind/Downloads/tol.jpeg" alt="Tower Bridge">
+                    <img src="/images/tol.jpeg" alt="Tower Bridge">
                     <h3>The Tower of London</h3>
             <p>Visit one of London's most iconic landmarks, home to the Crown Jewels and rich British history.</p>
             <p>Price: £30</p>
@@ -97,7 +96,7 @@
 
                 <!-- Attraction 7: westminster-abbey -->
                 <div class="ticket-item">
-                    <img src="/Users/arvind/Downloads/wb.jpeg" alt="Tower Bridge">
+                    <img src="/images/wb.jpeg" alt="Tower Bridge">
                     <h3>Westminster Abbey</h3>
             <p>Explore a gothic masterpiece and the final resting place of British monarchs and notable figures.</p>
             <p>Price: £24</p>
@@ -105,7 +104,7 @@
         </div>
                 <!-- Attraction 8: British Museum -->
                 <div class="ticket-item">
-                    <img src="/Users/arvind/Downloads/bm.jpeg" alt="British Museum">
+                    <img src="/images/bm.jpeg" alt="British Museum">
                     <h3>British Museum</h3>
                     <p>Adult: Free | Child: Free</p>
                     <p>The British Museum is free to visit and offers a range of exhibits and historical artifacts that span the world’s civilizations.</p>
