--- a/gallery.html
+++ b/gallery.html
@@ -11,13 +11,13 @@
     <!-- Navbar -->
     <nav>
       <div class="logo">
-        <a href="Londonattraction.html">
-        <img src="/Users/arvind/Downloads/logo.jpg"alt ="london-Attarction">
-          <!-- <a href="Londonattraction.html">London Attractions</a> -->
+        <a href="index.html">
+        <img src="/images/logo.jpg"alt ="london-Attarction">
+          <!-- <a href="index.html">London Attractions</a> -->
         </a>
       </div>
         <ul>
-            <li><a href="Londonattraction.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="booking.html">Booking</a></li>
             <li><a href="gallery.html">Gallery</a></li>
             <li><a href="contact.html">Contact</a></li>
@@ -40,9 +40,9 @@
                 <!-- Gallery Section with Multiple Images in each gallery-item -->
                 <div class="gallery-item">
                     <div class="image-gallery">
-                      <img src="/Users/arvind/Downloads/bigben.jpeg" alt="Big Ben">
-                        <img src="/Users/arvind/Downloads/bigben1.jpg" alt="Big Ben 2">
-                        <img src="/Users/arvind/Downloads/bigben2.jpg" alt="Big Ben 3">
+                      <img src="/images/bigben.jpeg" alt="Big Ben">
+                        <img src="/images/bigben1.jpg" alt="Big Ben 2">
+                        <img src="/images/bigben2.jpg" alt="Big Ben 3">
                     </div>
                     <div class="overlay">
                         <a href="booking.html" class="btn">Book a Tour</a>
@@ -51,9 +51,9 @@
                 
                 <div class="gallery-item">
                     <div class="image-gallery">
-                      <img src="/Users/arvind/Downloads/londoneye.webp" alt="London-Eye">
-                        <img src="/Users/arvind/Downloads/londoneye1.jpeg" alt="London-Eye">
-                        <img src="/Users/arvind/Downloads/londoneye.webp" alt="London-Eye">
+                      <img src="/images/londoneye.webp" alt="London-Eye">
+                        <img src="/images/londoneye1.jpeg" alt="London-Eye">
+                        <img src="/images/londoneye.webp" alt="London-Eye">
                     </div>
                     <div class="overlay">
                         <a href="booking.html" class="btn">Book a Tour</a>
@@ -62,9 +62,9 @@
 
                 <div class="gallery-item">
                     <div class="image-gallery">
-                        <img src="/Users/arvind/Downloads/tower1.jpeg" alt="Tower Bridge 1">
-                        <img src="/Users/arvind/Downloads/tower2.jpeg" alt="Tower Bridge 2">
-                        <img src="/Users/arvind/Downloads/tower1.jpeg" alt="Tower Bridge 3">
+                        <img src="/images/tower1.jpeg" alt="Tower Bridge 1">
+                        <img src="/images/tower2.jpeg" alt="Tower Bridge 2">
+                        <img src="/images/tower1.jpeg" alt="Tower Bridge 3">
                     </div>
                     <div class="overlay">
                         <a href="booking.html" class="btn">Book a Tour</a>
@@ -74,9 +74,9 @@
                 <!-- Westminster Abbey Gallery Item -->
                 <div class="gallery-item">
                     <div class="image-gallery">
-                        <img src="/Users/arvind/Downloads/wb.jpeg" alt="Westminster Abbey 1">
-                        <img src="/Users/arvind/Downloads/wb1.jpeg" alt="Westminster Abbey 2">
-                        <img src="/Users/arvind/Downloads/wb2.jpeg" alt="Westminster Abbey 3">
+                        <img src="/images/wb.jpeg" alt="Westminster Abbey 1">
+                        <img src="/images/wb1.jpeg" alt="Westminster Abbey 2">
+                        <img src="/images/wb2.jpeg" alt="Westminster Abbey 3">
                     </div>
                     <div class="overlay">
                         <a href="booking.html" class="btn">Book a Tour</a>
