--- a/api.html
+++ b/api.html
@@ -11,13 +11,13 @@
     <!-- Navbar -->
     <nav>
         <div class="logo">
-          <a href="Londonattraction.html">
-          <img src="/Users/arvind/Downloads/logo.jpg"alt ="london-Attarction">
-            <!-- <a href="Londonattraction.html">London Attractions</a> -->
+          <a href="index.html">
+          <img src="/images/logo.jpg"alt ="london-Attarction">
+            <!-- <a href="index.html">London Attractions</a> -->
           </a>
         </div>
         <ul>
-            <li><a href="Londonattraction.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="booking.html">Booking</a></li>
             <li><a href="gallery.html">Gallery</a></li>
             <li><a href="contact.html">Contact</a></li>
