--- a/contact.html
+++ b/contact.html
@@ -12,12 +12,12 @@
   <!-- Navigation Bar -->
   <nav>
     <div class="logo">
-      <a href="Londonattraction.html">
-        <img src="/Users/arvind/Downloads/logo.jpg" alt="London Attraction">
+      <a href="index.html">
+        <img src="/images/logo.jpg" alt="London Attraction">
       </a>
     </div>
     <ul>
-        <li><a href="Londonattraction.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="booking.html">Booking</a></li>
         <li><a href="gallery.html">Gallery</a></li>
         <li><a href="contact.html">Contact</a></li>
