color and theme changed

--- a/api.html
+++ b/api.html
@@ -32,11 +32,10 @@
     </nav>
 
 
-    <header>
+    <!-- <header>
       <div class=" content">
-        <h1> Check Weather</h1>
-        <p>Here you will find realtime information about London.</p>
-    </header>
+        <h1> Check Weather information about London.</h1>
+    </header> -->
 
     <main>
       <section class="attractions">
@@ -51,8 +50,22 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 London Attractions. All rights reserved.</p>
-    </footer>
+      <p>&copy; 2024 London Attractions. All rights reserved.</p>
+      
+      <div class="footer-links">
+          <a href="#">Privacy Policy</a> | 
+          <a href="#">Terms of Service</a> | 
+          <a href="#">Contact Us</a>
+      </div>
+      
+      <div class="social-icons">
+          <a href="#" aria-label="Facebook">🔵</a>
+          <a href="#" aria-label="Twitter">🔷</a>
+          <a href="#" aria-label="Instagram">📷</a>
+          <a href="#" aria-label="LinkedIn">🔗</a>
+      </div>
+  </footer>
+  
 
     <script>
       const url = 'https://weatherapi-com.p.rapidapi.com/alerts.json?q=london';
