--- a/booking.html
+++ b/booking.html
@@ -30,14 +30,14 @@
     <!-- Header Section -->
     <header>
       <div class=" content">
-        <h1>Ticket Prices for London's Top Attractions</h1>
+        <!-- <h1>Plan Your Trip: London Attraction Ticket Prices</h1> -->
     </div> 
    </header>
 
     <!-- Ticket and Price Section -->
     <main>
         <section class="ticket-price-section">
-            <h2>Get Your Tickets for the Best London Attractions</h2>
+            <!-- <h2>Get Your Tickets for the Best London Attractions</h2> -->
             <div class="ticket-container">
                 <!-- Attraction 1: Big Ben -->
                 <div class="ticket-item">
@@ -142,8 +142,22 @@
 
     <!-- Footer Section -->
     <footer>
-        <p>© 2025 London Attractions</p>
-    </footer>
+      <p>&copy; 2024 London Attractions. All rights reserved.</p>
+      
+      <div class="footer-links">
+          <a href="#">Privacy Policy</a> | 
+          <a href="#">Terms of Service</a> | 
+          <a href="#">Contact Us</a>
+      </div>
+      
+      <div class="social-icons">
+          <a href="#" aria-label="Facebook">🔵</a>
+          <a href="#" aria-label="Twitter">🔷</a>
+          <a href="#" aria-label="Instagram">📷</a>
+          <a href="#" aria-label="LinkedIn">🔗</a>
+      </div>
+  </footer>
+  
 </body>
 </html>
 
